# dekatlas

./: .gitignore  LICENSE  README.md  _CoqProject  build.sh  build_makefile.sh  dekatlas.opam
.github/workflows/: build.yml
theories/: Playground.v
