opam-version: "2.0"
maintainer: "https://github.com/Hexirp/dekatlas/issues"
version: "dev"

homepage: "https://github.com/Hexirp/dekatlas"
dev-repo: "git+https://github.com/Hexirp/dekatlas.git"
bug-reports: "https://github.com/Hexirp/dekatlas/issues"
doc: "https://hexirp.github.io/dekatlas/"
license: "MIT"

synopsis: "An Atlas of Googology"
description: """
Dekatlas is an atlas of googology. It is a project to formalize googology using Rocq.
"""

build: [
  ["sh" "-c" "coq_makefile -f _CoqProject -o CoqMakefile"]
  [make "-j%{jobs}%" "-f CoqMakefile"]
]

depends: [
  "ocaml" {>= "4.13.1"}
  "coq" {(>= "8.20.1") | (= "dev")}
]

tags: [
]

authors: [
  "Hexirp"
]
